logs/cloudshell-networking-ericsson-ipos.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Inject-3.3.1.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/configuration'...
Listing './lib/python3.5/site-packages/cloudshell/core'...
Listing './lib/python3.5/site-packages/cloudshell/core/context'...
Listing './lib/python3.5/site-packages/cloudshell/core/logger'...
Compiling './lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py'...
***   File "./lib/python3.5/site-packages/cloudshell/core/logger/qs_logger.py", line 285
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/networking'...
Listing './lib/python3.5/site-packages/cloudshell/networking/autoload'...
Listing './lib/python3.5/site-packages/cloudshell/networking/autoload/model'...
Listing './lib/python3.5/site-packages/cloudshell/networking/core'...
Listing './lib/python3.5/site-packages/cloudshell/networking/ericsson'...
Listing './lib/python3.5/site-packages/cloudshell/networking/ericsson/autoload'...
Listing './lib/python3.5/site-packages/cloudshell/networking/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/networking/interfaces/connectivity'...
Compiling './lib/python3.5/site-packages/cloudshell/networking/interfaces/connectivity/set_vlan_action.py'...
***   File "./lib/python3.5/site-packages/cloudshell/networking/interfaces/connectivity/set_vlan_action.py", line 1
    from CloudShell-Core.action_request import ActionRequest
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/networking/operations'...
Listing './lib/python3.5/site-packages/cloudshell/networking/operations/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/shell'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/dependency_injection'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/interfaces'...
Listing './lib/python3.5/site-packages/cloudshell/shell/core/session'...
Listing './lib/python3.5/site-packages/cloudshell/tests'...
Listing './lib/python3.5/site-packages/cloudshell/tests/driver_bootstrap'...
Listing './lib/python3.5/site-packages/cloudshell/tests/networking'...
Listing './lib/python3.5/site-packages/cloudshell/tests/networking/ericsson'...
Listing './lib/python3.5/site-packages/cloudshell/tests/networking/ericsson/configuration'...
Compiling './lib/python3.5/site-packages/cloudshell/tests/networking/ericsson/configuration/tests_ericsson_configuration.py'...
***   File "./lib/python3.5/site-packages/cloudshell/tests/networking/ericsson/configuration/tests_ericsson_configuration.py", line 46
    print json_string
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cloudshell/tests/networking/ericsson/connectivity'...
Listing './lib/python3.5/site-packages/cloudshell/tests/networking/ericsson/firmware'...
Listing './lib/python3.5/site-packages/cloudshell/tests/networking/ericsson/state'...
Listing './lib/python3.5/site-packages/cloudshell_core-2.1.153.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_networking-3.0.19.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_networking_ericsson-1.0.16.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_shell_core-2.3.4.egg-info'...
Listing './lib/python3.5/site-packages/ipcalc-1.1.3.egg-info'...
Compiling './lib/python3.5/site-packages/ipcalc.py'...
***   File "./lib/python3.5/site-packages/ipcalc.py", line 237
    if ip > 0xffffffffffffffffffffffffffffffffL:
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonpickle'...
Listing './lib/python3.5/site-packages/jsonpickle/ext'...
Listing './lib/python3.5/site-packages/jsonpickle-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './lib/python3.5/site-packages/tests/core/logger'...
Listing './lib/python3.5/site-packages/tests/core/logger/config'...
Listing './share'...
Listing './share/python-wheels'...
